--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,21 @@
-<<<<<<< HEAD
-cat > .gitignore <<EOF
-# Node
+# ==============================
+# Node.js / TypeScript
+# ==============================
 node_modules/
-.env
 dist/
-# Sistema
+.env
+
+# ==============================
+# Sistema operacional
+# ==============================
 .DS_Store
 Thumbs.db
+
+# ==============================
 # IDEs
+# ==============================
 .vscode/
 .idea/
-EOF
-=======
-node_modules/
-.env
-dist/
-.DS_Store
-.vscode/
->>>>>>> 860c326 (Commit 20/11 Adicionado Recepcionista)
+
+
 
